imgui-sys2/third-party/imgui-master/cimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef struct ImVector_ImWchar_t ImVector_ImWchar;
typedef struct ImVector_float_t ImVector_float;
typedef struct ImVector_ImFontGlyph_t ImVector_ImFontGlyph;
typedef struct ImFont_t
    ImFont; 
typedef struct ImFontAtlas_t
    ImFontAtlas; 
typedef struct ImFontConfig_t
    ImFontConfig; 
typedef struct ImFontGlyph_t
    ImFontGlyph; 
typedef int ImGuiCol;  
typedef int ImGuiCond; 
typedef int
    ImGuiDir; 
typedef int ImGuiStyleVar; 
typedef int ImGuiButtonFlags;    
typedef int
    ImGuiComboFlags; 
typedef int
    ImGuiSliderFlags; 
typedef void
    *ImTextureID; 
typedef unsigned int ImGuiID; 
typedef unsigned char ImU8;   
typedef unsigned int
    ImU32; 
typedef ImWchar32 ImWchar;
typedef ImWchar16 ImWchar;
IM_MSVC_RUNTIME_CHECKS_OFF
typedef struct ImVec2_t {
  float x, y;
} ImVec2;
typedef struct ImVec4_t {
  float x, y, z, w;
} ImVec4;
CIMGUI_API void ImGui_SetWindowFocus(
    void); 
CIMGUI_API void ImGui_SetWindowFontScale(
    float scale); 
CIMGUI_API void
ImGui_SetWindowPosStr(const char *name, ImVec2 pos,
                      ImGuiCond cond ); 
CIMGUI_API void ImGui_SetWindowSizeStr(
    const char *name, ImVec2 size,
    ImGuiCond cond ); 
CIMGUI_API void ImGui_SetWindowCollapsedStr(
    const char *name, bool collapsed,
    ImGuiCond cond ); 
CIMGUI_API void ImGui_SetWindowFocusStr(
    const char *name); 
CIMGUI_API ImVec2
ImGui_GetContentRegionAvail(void); 
CIMGUI_API ImVec2 ImGui_GetContentRegionMax(
    void); 
CIMGUI_API ImVec2 ImGui_GetWindowContentRegionMin(
    void); 
CIMGUI_API ImVec2 ImGui_GetWindowContentRegionMax(
    void); 
CIMGUI_API float
ImGui_GetScrollX(void); 
CIMGUI_API float
ImGui_GetScrollY(void); 
CIMGUI_API void
ImGui_SetScrollX(float scroll_x); 
CIMGUI_API void
ImGui_SetScrollY(float scroll_y); 
CIMGUI_API float
ImGui_GetScrollMaxX(void); 
CIMGUI_API float
ImGui_GetScrollMaxY(void); 
CIMGUI_API void ImGui_SetScrollHereX(
    float center_x_ratio ); 
CIMGUI_API void ImGui_SetScrollHereY(
    float center_y_ratio ); 
CIMGUI_API void ImGui_SetScrollFromPosX(
    float local_x,
    float center_x_ratio ); 
CIMGUI_API void ImGui_SetScrollFromPosY(
    float local_y,
    float center_y_ratio ); 
CIMGUI_API void
ImGui_PushFont(ImFont *font); 
CIMGUI_API void ImGui_PopFont(void);
CIMGUI_API void
ImGui_PushStyleColor(ImGuiCol idx,
                     ImU32 col); 
CIMGUI_API void ImGui_PushStyleColorImVec4(ImGuiCol idx, ImVec4 col);
CIMGUI_API void ImGui_PopStyleColor(void); 
CIMGUI_API void ImGui_PopStyleColorEx(int count );
CIMGUI_API void
ImGui_PushStyleVar(ImGuiStyleVar idx,
                   float val); 
CIMGUI_API void ImGui_PushStyleVarImVec2(
    ImGuiStyleVar idx,
    ImVec2 val); 
CIMGUI_API void ImGui_PopStyleVar(void); 
CIMGUI_API void ImGui_PopStyleVarEx(int count );
CIMGUI_API void
ImGui_PushTabStop(bool tab_stop); 
CIMGUI_API void ImGui_PopTabStop(void);
CIMGUI_API void ImGui_PushButtonRepeat(
    bool repeat); 
CIMGUI_API void ImGui_PopButtonRepeat(void);
CIMGUI_API void ImGui_PushItemWidth(
    float item_width); 
CIMGUI_API void ImGui_PopItemWidth(void);
CIMGUI_API void ImGui_SetNextItemWidth(
    float item_width); 
CIMGUI_API float
ImGui_CalcItemWidth(void); 
CIMGUI_API void ImGui_PushTextWrapPos(
    float wrap_local_pos_x ); 
CIMGUI_API void ImGui_PopTextWrapPos(void);
CIMGUI_API ImFont *ImGui_GetFont(void); 
CIMGUI_API float
ImGui_GetFontSize(void); 
CIMGUI_API ImVec2 ImGui_GetFontTexUvWhitePixel(
    void); 
CIMGUI_API ImU32 ImGui_GetColorU32(ImGuiCol idx); 
CIMGUI_API ImU32 ImGui_GetColorU32Ex(
    ImGuiCol idx,
    float alpha_mul ); 
CIMGUI_API ImU32 ImGui_GetColorU32ImVec4(
    ImVec4 col); 
CIMGUI_API ImU32 ImGui_GetColorU32ImU32(
    ImU32 col); 
CIMGUI_API const ImVec4 *ImGui_GetStyleColorVec4(
    ImGuiCol
        idx); 
CIMGUI_API void ImGui_Separator(
    void); 
CIMGUI_API void
ImGui_SameLine(void); 
CIMGUI_API void ImGui_SameLineEx(
    float offset_from_start_x ,
    float spacing );    
CIMGUI_API void ImGui_NewLine(void); 
CIMGUI_API void ImGui_Spacing(void); 
CIMGUI_API void ImGui_Dummy(
    ImVec2 size); 
CIMGUI_API void ImGui_Indent(void); 
CIMGUI_API void ImGui_IndentEx(
    float indent_w ); 
CIMGUI_API void ImGui_Unindent(void); 
CIMGUI_API void ImGui_UnindentEx(
    float indent_w ); 
CIMGUI_API void ImGui_BeginGroup(void); 
CIMGUI_API void ImGui_EndGroup(
    void); 
CIMGUI_API ImVec2
ImGui_GetCursorPos(void); 
CIMGUI_API float ImGui_GetCursorPosX(
    void); 
CIMGUI_API float
ImGui_GetCursorPosY(void); 
CIMGUI_API void ImGui_SetCursorPos(
    ImVec2 local_pos); 
CIMGUI_API void
ImGui_SetCursorPosX(float local_x); 
CIMGUI_API void ImGui_SetCursorPosY(float local_y); 
CIMGUI_API ImVec2
ImGui_GetCursorStartPos(void); 
CIMGUI_API ImVec2 ImGui_GetCursorScreenPos(
    void); 
CIMGUI_API void
ImGui_SetCursorScreenPos(ImVec2 pos); 
CIMGUI_API void ImGui_AlignTextToFramePadding(
    void); 
CIMGUI_API float ImGui_GetTextLineHeight(void); 
CIMGUI_API float ImGui_GetTextLineHeightWithSpacing(
    void); 
CIMGUI_API float
ImGui_GetFrameHeight(void); 
CIMGUI_API float ImGui_GetFrameHeightWithSpacing(
    void); 
CIMGUI_API void ImGui_PushID(
    const char *str_id); 
CIMGUI_API void ImGui_PushIDStr(
    const char *str_id_begin,
    const char
        *str_id_end); 
CIMGUI_API void ImGui_PushIDPtr(
    const void *ptr_id); 
CIMGUI_API void ImGui_PushIDInt(
    int int_id); 
CIMGUI_API void ImGui_PopID(void); 
CIMGUI_API ImGuiID
ImGui_GetID(const char *str_id); 
CIMGUI_API ImGuiID ImGui_GetIDStr(const char *str_id_begin,
                                  const char *str_id_end);
CIMGUI_API ImGuiID ImGui_GetIDPtr(const void *ptr_id);
CIMGUI_API void
ImGui_TextUnformatted(const char *text); 
CIMGUI_API void ImGui_TextUnformattedEx(
    const char *text,
    const char
        *text_end ); 
CIMGUI_API void ImGui_TextV(const char *fmt, va_list args) IM_FMTLIST(1);
CIMGUI_API void ImGui_TextColoredV(ImVec4 col, const char *fmt, va_list args)
    IM_FMTLIST(2);
CIMGUI_API void ImGui_TextDisabledV(const char *fmt, va_list args)
    IM_FMTLIST(1);
CIMGUI_API void ImGui_TextWrappedV(const char *fmt, va_list args) IM_FMTLIST(1);
CIMGUI_API void ImGui_LabelTextV(const char *label, const char *fmt,
                                 va_list args) IM_FMTLIST(2);
CIMGUI_API void ImGui_BulletTextV(const char *fmt, va_list args) IM_FMTLIST(1);
CIMGUI_API void ImGui_SeparatorText(
    const char *label); 
CIMGUI_API bool ImGui_Button(const char *label); 
CIMGUI_API bool ImGui_ButtonEx(const char *label,
                               ImVec2 size ); 
CIMGUI_API bool ImGui_SmallButton(
    const char
        *label); 
CIMGUI_API bool ImGui_InvisibleButton(
    const char *str_id, ImVec2 size,
    ImGuiButtonFlags
        flags ); 
CIMGUI_API bool
ImGui_ArrowButton(const char *str_id,
                  ImGuiDir dir); 
CIMGUI_API bool ImGui_Checkbox(const char *label, bool *v);
CIMGUI_API bool ImGui_CheckboxFlagsIntPtr(const char *label, int *flags,
                                          int flags_value);
CIMGUI_API bool ImGui_CheckboxFlagsUintPtr(const char *label,
                                           unsigned int *flags,
                                           unsigned int flags_value);
CIMGUI_API bool
ImGui_RadioButton(const char *label,
                  bool active); 
CIMGUI_API bool
ImGui_RadioButtonIntPtr(const char *label, int *v,
                        int v_button); 
CIMGUI_API void ImGui_ProgressBar(float fraction,
                                  ImVec2 size_arg ,
                                  const char *overlay );
CIMGUI_API void
ImGui_Bullet(void); 
CIMGUI_API void ImGui_Image(
    ImTextureID user_texture_id,
    ImVec2 size); 
CIMGUI_API void ImGui_ImageEx(ImTextureID user_texture_id, ImVec2 size,
                              ImVec2 uv0 ,
                              ImVec2 uv1 ,
                              ImVec4 tint_col ,
                              ImVec4 border_col );
CIMGUI_API bool ImGui_ImageButton(
    const char *str_id, ImTextureID user_texture_id,
    ImVec2 size); 
CIMGUI_API bool ImGui_ImageButtonEx(const char *str_id,
                                    ImTextureID user_texture_id, ImVec2 size,
                                    ImVec2 uv0 ,
                                    ImVec2 uv1 ,
                                    ImVec4 bg_col ,
                                    ImVec4 tint_col );
CIMGUI_API bool ImGui_BeginCombo(const char *label, const char *preview_value,
                                 ImGuiComboFlags flags );
CIMGUI_API void
ImGui_EndCombo(void); 
CIMGUI_API bool
ImGui_ComboChar(const char *label, int *current_item, const char *const items[],
                int items_count); 
CIMGUI_API bool ImGui_ComboCharEx(const char *label, int *current_item,
                                  const char *const items[], int items_count,
                                  int popup_max_height_in_items );
CIMGUI_API bool ImGui_Combo(
    const char *label, int *current_item,
    const char
        *items_separated_by_zeros); 
CIMGUI_API bool ImGui_ComboEx(
    const char *label, int *current_item, const char *items_separated_by_zeros,
    int popup_max_height_in_items ); 
CIMGUI_API bool ImGui_ComboCallback(
    const char *label, int *current_item,
    bool (*items_getter)(void *data, int idx, const char **out_text),
    void *data, int items_count); 
CIMGUI_API bool ImGui_ComboCallbackEx(
    const char *label, int *current_item,
    bool (*items_getter)(void *data, int idx, const char **out_text),
    void *data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool
ImGui_DragFloat(const char *label,
                float *v); 
CIMGUI_API bool ImGui_DragFloatEx(
    const char *label, float *v, float v_speed ,
    float v_min , float v_max ,
    const char *format ,
    ImGuiSliderFlags flags ); 
CIMGUI_API bool
ImGui_DragFloat2(const char *label,
                 float v[2]); 
CIMGUI_API bool ImGui_DragFloat2Ex(const char *label, float v[2],
                                   float v_speed ,
                                   float v_min ,
                                   float v_max ,
                                   const char *format ,
                                   ImGuiSliderFlags flags );
CIMGUI_API bool
ImGui_DragFloat3(const char *label,
                 float v[3]); 
CIMGUI_API bool ImGui_DragFloat3Ex(const char *label, float v[3],
                                   float v_speed ,
                                   float v_min ,
                                   float v_max ,
                                   const char *format ,
                                   ImGuiSliderFlags flags );
CIMGUI_API bool
ImGui_DragFloat4(const char *label,
                 float v[4]); 
CIMGUI_API bool ImGui_DragFloat4Ex(const char *label, float v[4],
                                   float v_speed ,
                                   float v_min ,
                                   float v_max ,
                                   const char *format ,
                                   ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_DragFloatRange2(
    const char *label, float *v_current_min,
    float
        *v_current_max); 
CIMGUI_API bool ImGui_ListBoxCallback(
    const char *label, int *current_item,
    bool (*items_getter)(void *data, int idx, const char **out_text),
    void *data, int items_count); 
CIMGUI_API bool ImGui_ListBoxCallbackEx(
    const char *label, int *current_item,
    bool (*items_getter)(void *data, int idx, const char **out_text),
    void *data, int items_count, int height_in_items );
typedef struct ImVector_float_t {
  int Size;
  int Capacity;
  float *Data;
} ImVector_float;
typedef struct ImVector_ImFontGlyph_t {
  int Size;
  int Capacity;
  ImFontGlyph *Data;
} ImVector_ImFontGlyph;
typedef struct ImFontConfig_t {
  void *FontData;            
  int FontDataSize;          
  bool FontDataOwnedByAtlas; 
  int FontNo;                
  float SizePixels; 
  int OversampleH;  
  int OversampleV; 
  bool PixelSnapH; 
  ImVec2 GlyphExtraSpacing; 
  ImVec2 GlyphOffset; 
  const ImWchar
      *GlyphRanges; 
  float GlyphMinAdvanceX; 
  float GlyphMaxAdvanceX; 
  bool MergeMode; 
  unsigned int FontBuilderFlags; 
  float RasterizerMultiply; 
  ImWchar EllipsisChar; 
  char Name[40]; 
  ImFont *DstFont;
} ImFontConfig;
typedef struct ImFontGlyph_t {
  unsigned int Colored : 1; 
  unsigned int Visible : 1; 
  unsigned int Codepoint : 30; 
  float AdvanceX;              
  float X0, Y0, X1, Y1;        
  float U0, V0, U1, V1;        
} ImFontGlyph;
typedef struct ImFontAtlas_t {
  ImFontAtlasFlags Flags; 
  ImTextureID TexID;      
  int TexDesiredWidth; 
  int TexGlyphPadding; 
  bool Locked; 
  void *UserData; 
  bool TexReady; 
  bool TexPixelsUseColors; 
  unsigned char
      *TexPixelsAlpha8; 
  unsigned int
      *TexPixelsRGBA32;   
  int TexWidth;           
  int TexHeight;          
  ImVec2 TexUvScale;      
  ImVec2 TexUvWhitePixel; 
  ImVector_ImFontPtr
      Fonts; 
  ImVector_ImFontAtlasCustomRect
      CustomRects; 
  ImVector_ImFontConfig ConfigData; 
  ImVec4 TexUvLines[IM_DRAWLIST_TEX_LINES_WIDTH_MAX +
                    1]; 
  const ImFontBuilderIO
      *FontBuilderIO; 
  unsigned int
      FontBuilderFlags; 
  int PackIdMouseCursors; 
  int PackIdLines; 
} ImFontAtlas;
typedef struct ImFont_t {
  ImVector_float
      IndexAdvanceX; 
  float FallbackAdvanceX; 
  float FontSize; 
  ImVector_ImWchar IndexLookup; 
  ImVector_ImFontGlyph Glyphs;  
  const ImFontGlyph
      *FallbackGlyph; 
  ImFontAtlas *ContainerAtlas; 
  const ImFontConfig *ConfigData; 
  short ConfigDataCount; 
  ImWchar FallbackChar;  
  ImWchar EllipsisChar;  
  short EllipsisCharCount; 
  float EllipsisWidth;     
  float EllipsisCharStep;  
  bool DirtyLookupTables;  
  float Scale; 
  float Ascent, Descent; 
  int MetricsTotalSurface; 
  ImU8 Used4kPagesMap[(IM_UNICODE_CODEPOINT_MAX + 1) / 4096 /
                      8]; 
} ImFont;