imgui-sys2/src/exp_bindings.rs

extern "C" {
    pub fn ImGui_SetWindowFocus();
}
extern "C" {
    pub fn ImGui_SetWindowFontScale(scale: f32);
}
extern "C" {
    pub fn ImGui_SetWindowPosStr(name: *const cty::c_char, pos: ImVec2, cond: ImGuiCond);
}
extern "C" {
    pub fn ImGui_SetWindowSizeStr(name: *const cty::c_char, size: ImVec2, cond: ImGuiCond);
}
extern "C" {
    pub fn ImGui_SetWindowCollapsedStr(name: *const cty::c_char, collapsed: bool, cond: ImGuiCond);
}
extern "C" {
    pub fn ImGui_SetWindowFocusStr(name: *const cty::c_char);
}
extern "C" {
    pub fn ImGui_GetContentRegionAvail() -> ImVec2;
}
extern "C" {
    pub fn ImGui_GetContentRegionMax() -> ImVec2;
}
extern "C" {
    pub fn ImGui_GetWindowContentRegionMin() -> ImVec2;
}
extern "C" {
    pub fn ImGui_GetWindowContentRegionMax() -> ImVec2;
}
extern "C" {
    pub fn ImGui_GetScrollX() -> f32;
}
extern "C" {
    pub fn ImGui_GetScrollY() -> f32;
}
extern "C" {
    pub fn ImGui_SetScrollX(scroll_x: f32);
}
extern "C" {
    pub fn ImGui_SetScrollY(scroll_y: f32);
}
extern "C" {
    pub fn ImGui_GetScrollMaxX() -> f32;
}
extern "C" {
    pub fn ImGui_GetScrollMaxY() -> f32;
}
extern "C" {
    pub fn ImGui_SetScrollHereX(center_x_ratio: f32);
}
extern "C" {
    pub fn ImGui_SetScrollHereY(center_y_ratio: f32);
}
extern "C" {
    pub fn ImGui_SetScrollFromPosX(local_x: f32, center_x_ratio: f32);
}
extern "C" {
    pub fn ImGui_SetScrollFromPosY(local_y: f32, center_y_ratio: f32);
}
extern "C" {
    pub fn ImGui_PushFont(font: *mut ImFont);
}
extern "C" {
    pub fn ImGui_PopFont();
}
extern "C" {
    pub fn ImGui_PushStyleColor(idx: ImGuiCol, col: ImU32);
}
extern "C" {
    pub fn ImGui_PushStyleColorImVec4(idx: ImGuiCol, col: ImVec4);
}
extern "C" {
    pub fn ImGui_PopStyleColor();
}
extern "C" {
    pub fn ImGui_PopStyleColorEx(count: cty::c_int);
}
extern "C" {
    pub fn ImGui_PushStyleVar(idx: ImGuiStyleVar, val: f32);
}
extern "C" {
    pub fn ImGui_PushStyleVarImVec2(idx: ImGuiStyleVar, val: ImVec2);
}
extern "C" {
    pub fn ImGui_PopStyleVar();
}
extern "C" {
    pub fn ImGui_PopStyleVarEx(count: cty::c_int);
}
extern "C" {
    pub fn ImGui_PushTabStop(tab_stop: bool);
}
extern "C" {
    pub fn ImGui_PopTabStop();
}
extern "C" {
    pub fn ImGui_PushButtonRepeat(repeat: bool);
}
extern "C" {
    pub fn ImGui_PopButtonRepeat();
}
extern "C" {
    pub fn ImGui_PushItemWidth(item_width: f32);
}
extern "C" {
    pub fn ImGui_PopItemWidth();
}
extern "C" {
    pub fn ImGui_SetNextItemWidth(item_width: f32);
}
extern "C" {
    pub fn ImGui_CalcItemWidth() -> f32;
}
extern "C" {
    pub fn ImGui_PushTextWrapPos(wrap_local_pos_x: f32);
}
extern "C" {
    pub fn ImGui_PopTextWrapPos();
}
extern "C" {
    pub fn ImGui_GetFont() -> *mut ImFont;
}
extern "C" {
    pub fn ImGui_GetFontSize() -> f32;
}
extern "C" {
    pub fn ImGui_GetFontTexUvWhitePixel() -> ImVec2;
}
extern "C" {
    pub fn ImGui_GetColorU32(idx: ImGuiCol) -> ImU32;
}
extern "C" {
    pub fn ImGui_GetColorU32Ex(idx: ImGuiCol, alpha_mul: f32) -> ImU32;
}
extern "C" {
    pub fn ImGui_GetColorU32ImVec4(col: ImVec4) -> ImU32;
}
extern "C" {
    pub fn ImGui_GetColorU32ImU32(col: ImU32) -> ImU32;
}
extern "C" {
    pub fn ImGui_GetStyleColorVec4(idx: ImGuiCol) -> *const ImVec4;
}
extern "C" {
    pub fn ImGui_Separator();
}
extern "C" {
    pub fn ImGui_SameLine();
}
extern "C" {
    pub fn ImGui_SameLineEx(offset_from_start_x: f32, spacing: f32);
}
extern "C" {
    pub fn ImGui_NewLine();
}
extern "C" {
    pub fn ImGui_Spacing();
}
extern "C" {
    pub fn ImGui_Dummy(size: ImVec2);
}
extern "C" {
    pub fn ImGui_Indent();
}
extern "C" {
    pub fn ImGui_IndentEx(indent_w: f32);
}
extern "C" {
    pub fn ImGui_Unindent();
}
extern "C" {
    pub fn ImGui_UnindentEx(indent_w: f32);
}
extern "C" {
    pub fn ImGui_BeginGroup();
}
extern "C" {
    pub fn ImGui_EndGroup();
}
extern "C" {
    pub fn ImGui_GetCursorPos() -> ImVec2;
}
extern "C" {
    pub fn ImGui_GetCursorPosX() -> f32;
}
extern "C" {
    pub fn ImGui_GetCursorPosY() -> f32;
}
extern "C" {
    pub fn ImGui_SetCursorPos(local_pos: ImVec2);
}
extern "C" {
    pub fn ImGui_SetCursorPosX(local_x: f32);
}
extern "C" {
    pub fn ImGui_SetCursorPosY(local_y: f32);
}
extern "C" {
    pub fn ImGui_GetCursorStartPos() -> ImVec2;
}
extern "C" {
    pub fn ImGui_GetCursorScreenPos() -> ImVec2;
}
extern "C" {
    pub fn ImGui_SetCursorScreenPos(pos: ImVec2);
}
extern "C" {
    pub fn ImGui_AlignTextToFramePadding();
}
extern "C" {
    pub fn ImGui_GetTextLineHeight() -> f32;
}
extern "C" {
    pub fn ImGui_GetTextLineHeightWithSpacing() -> f32;
}
extern "C" {
    pub fn ImGui_GetFrameHeight() -> f32;
}
extern "C" {
    pub fn ImGui_GetFrameHeightWithSpacing() -> f32;
}
extern "C" {
    pub fn ImGui_PushID(str_id: *const cty::c_char);
}
extern "C" {
    pub fn ImGui_PushIDStr(str_id_begin: *const cty::c_char, str_id_end: *const cty::c_char);
}
extern "C" {
    pub fn ImGui_PushIDPtr(ptr_id: *const cty::c_void);
}
extern "C" {
    pub fn ImGui_PushIDInt(int_id: cty::c_int);
}
extern "C" {
    pub fn ImGui_PopID();
}
extern "C" {
    pub fn ImGui_GetID(str_id: *const cty::c_char) -> ImGuiID;
}
extern "C" {
    pub fn ImGui_GetIDStr(
        str_id_begin: *const cty::c_char,
        str_id_end: *const cty::c_char,
    ) -> ImGuiID;
}
extern "C" {
    pub fn ImGui_GetIDPtr(ptr_id: *const cty::c_void) -> ImGuiID;
}
extern "C" {
    pub fn ImGui_TextUnformatted(text: *const cty::c_char);
}
extern "C" {
    pub fn ImGui_TextUnformattedEx(text: *const cty::c_char, text_end: *const cty::c_char);
}
extern "C" {
    pub fn ImGui_TextV(fmt: *const cty::c_char, args: va_list);
}
extern "C" {
    pub fn ImGui_TextColoredV(col: ImVec4, fmt: *const cty::c_char, args: va_list);
}
extern "C" {
    pub fn ImGui_TextDisabledV(fmt: *const cty::c_char, args: va_list);
}
extern "C" {
    pub fn ImGui_TextWrappedV(fmt: *const cty::c_char, args: va_list);
}
extern "C" {
    pub fn ImGui_LabelTextV(label: *const cty::c_char, fmt: *const cty::c_char, args: va_list);
}
extern "C" {
    pub fn ImGui_BulletTextV(fmt: *const cty::c_char, args: va_list);
}
extern "C" {
    pub fn ImGui_SeparatorText(label: *const cty::c_char);
}
extern "C" {
    pub fn ImGui_Button(label: *const cty::c_char) -> bool;
}
extern "C" {
    pub fn ImGui_ButtonEx(label: *const cty::c_char, size: ImVec2) -> bool;
}
extern "C" {
    pub fn ImGui_SmallButton(label: *const cty::c_char) -> bool;
}
extern "C" {
    pub fn ImGui_InvisibleButton(
        str_id: *const cty::c_char,
        size: ImVec2,
        flags: ImGuiButtonFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ArrowButton(str_id: *const cty::c_char, dir: ImGuiDir) -> bool;
}
extern "C" {
    pub fn ImGui_Checkbox(label: *const cty::c_char, v: *mut bool) -> bool;
}
extern "C" {
    pub fn ImGui_CheckboxFlagsIntPtr(
        label: *const cty::c_char,
        flags: *mut cty::c_int,
        flags_value: cty::c_int,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_CheckboxFlagsUintPtr(
        label: *const cty::c_char,
        flags: *mut cty::c_uint,
        flags_value: cty::c_uint,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_RadioButton(label: *const cty::c_char, active: bool) -> bool;
}
extern "C" {
    pub fn ImGui_RadioButtonIntPtr(
        label: *const cty::c_char,
        v: *mut cty::c_int,
        v_button: cty::c_int,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ProgressBar(fraction: f32, size_arg: ImVec2, overlay: *const cty::c_char);
}
extern "C" {
    pub fn ImGui_Bullet();
}
extern "C" {
    pub fn ImGui_Image(user_texture_id: ImTextureID, size: ImVec2);
}
extern "C" {
    pub fn ImGui_ImageEx(
        user_texture_id: ImTextureID,
        size: ImVec2,
        uv0: ImVec2,
        uv1: ImVec2,
        tint_col: ImVec4,
        border_col: ImVec4,
    );
}
extern "C" {
    pub fn ImGui_ImageButton(
        str_id: *const cty::c_char,
        user_texture_id: ImTextureID,
        size: ImVec2,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ImageButtonEx(
        str_id: *const cty::c_char,
        user_texture_id: ImTextureID,
        size: ImVec2,
        uv0: ImVec2,
        uv1: ImVec2,
        bg_col: ImVec4,
        tint_col: ImVec4,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_BeginCombo(
        label: *const cty::c_char,
        preview_value: *const cty::c_char,
        flags: ImGuiComboFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_EndCombo();
}
extern "C" {
    pub fn ImGui_ComboChar(
        label: *const cty::c_char,
        current_item: *mut cty::c_int,
        items: *const *const cty::c_char,
        items_count: cty::c_int,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ComboCharEx(
        label: *const cty::c_char,
        current_item: *mut cty::c_int,
        items: *const *const cty::c_char,
        items_count: cty::c_int,
        popup_max_height_in_items: cty::c_int,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_Combo(
        label: *const cty::c_char,
        current_item: *mut cty::c_int,
        items_separated_by_zeros: *const cty::c_char,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ComboEx(
        label: *const cty::c_char,
        current_item: *mut cty::c_int,
        items_separated_by_zeros: *const cty::c_char,
        popup_max_height_in_items: cty::c_int,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ComboCallback(
        label: *const cty::c_char,
        current_item: *mut cty::c_int,
        items_getter: ::core::option::Option<
            unsafe extern "C" fn(
                data: *mut cty::c_void,
                idx: cty::c_int,
                out_text: *mut *const cty::c_char,
            ) -> bool,
        >,
        data: *mut cty::c_void,
        items_count: cty::c_int,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_ComboCallbackEx(
        label: *const cty::c_char,
        current_item: *mut cty::c_int,
        items_getter: ::core::option::Option<
            unsafe extern "C" fn(
                data: *mut cty::c_void,
                idx: cty::c_int,
                out_text: *mut *const cty::c_char,
            ) -> bool,
        >,
        data: *mut cty::c_void,
        items_count: cty::c_int,
        popup_max_height_in_items: cty::c_int,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_DragFloat(label: *const cty::c_char, v: *mut f32) -> bool;
}
extern "C" {
    pub fn ImGui_DragFloatEx(
        label: *const cty::c_char,
        v: *mut f32,
        v_speed: f32,
        v_min: f32,
        v_max: f32,
        format: *const cty::c_char,
        flags: ImGuiSliderFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_DragFloat2(label: *const cty::c_char, v: *mut f32) -> bool;
}
extern "C" {
    pub fn ImGui_DragFloat2Ex(
        label: *const cty::c_char,
        v: *mut f32,
        v_speed: f32,
        v_min: f32,
        v_max: f32,
        format: *const cty::c_char,
        flags: ImGuiSliderFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_DragFloat3(label: *const cty::c_char, v: *mut f32) -> bool;
}
extern "C" {
    pub fn ImGui_DragFloat3Ex(
        label: *const cty::c_char,
        v: *mut f32,
        v_speed: f32,
        v_min: f32,
        v_max: f32,
        format: *const cty::c_char,
        flags: ImGuiSliderFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_DragFloat4(label: *const cty::c_char, v: *mut f32) -> bool;
}
extern "C" {
    pub fn ImGui_DragFloat4Ex(
        label: *const cty::c_char,
        v: *mut f32,
        v_speed: f32,
        v_min: f32,
        v_max: f32,
        format: *const cty::c_char,
        flags: ImGuiSliderFlags,
    ) -> bool;
}
extern "C" {
    pub fn ImGui_DragFloatRange2(
        label: *const cty::c_char,
        v_current_min: *mut f32,
        v_current_max: *mut f32,
    ) -> bool;
}
